--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "openshift_demo",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "openshift demo",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "mongoose": "^4.3.1"
   },
   "devDependencies": {},
   "scripts": {
