--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "openshift_demo",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "openshift demo",
   "main": "server.js",
   "dependencies": {
     "express": "^4.13.3",
-    "mongoose": "^4.3.1"
+    "mongoose": "^4.3.1",
+    "ejs": "^2.3.4"
   },
   "devDependencies": {},
   "scripts": {
