--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "openshift_demo",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "openshift demo",
   "main": "server.js",
   "dependencies": {
     "express": "^4.13.3",
     "mongoose": "^4.3.1",
-    "ejs": "^2.3.4"
+    "ejs": "^2.3.4",
+    "express-ejs-layouts" : "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
